Fix word wrap

--- a/src/components/Comment/index.css
+++ b/src/components/Comment/index.css
@@ -2,6 +2,7 @@
     border: 0;
     border-bottom: 1px solid #ccc;
     cursor: pointer;
+    word-break: break-all;
 }
 
 .comment:hover {
