--- a/src/components/Item/index.css
+++ b/src/components/Item/index.css
@@ -9,6 +9,7 @@
 
 .item-title {
     font-size: 18px;
+    word-break: break-all;
 }
 
 .item-active {
